maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: ';' expected but ')' found.
  if ((x-1)>=0) && !aMurOuest(x,y) && getIndication(x-1,y)>i+1){
                                                              ^